Overflow in der Navigation auch bei kleinen Geräten aktivieren (wieso war das aus?). Fix der Icons für Elemente.

--- a/modules/cms-ui/themes/default/style/openrat-ui.less
+++ b/modules/cms-ui/themes/default/style/openrat-ui.less
@@ -55,13 +55,15 @@
   font-feature-settings: 'liga';
 
   //&.image-icon--method-publish:after { content: "\F21E"; }
-  &.image-icon--element-date:after { content: "date_range"; }
-  &.image-icon--element-infodate:after { content: "info"; }
-  &.image-icon--element-insert:after { content: "vertical_split"; }
-  &.image-icon--element-text:after { content: "spellcheck"; }
-  &.image-icon--element-info:after { content: "info"; }
-  &.image-icon--element-dynamic:after { content: "play_circle_outline"; }
-  &.image-icon--element-longtext:after { content: "view_headline"; }
+  &.image-icon--action-el_date:after { content: "date_range"; }
+  &.image-icon--action-el_infodate:after { content: "info"; }
+  &.image-icon--action-el_insert:after { content: "vertical_split"; }
+  &.image-icon--action-el_text:after { content: "spellcheck"; }
+  &.image-icon--action-el_info:after { content: "info"; }
+  &.image-icon--action-el_dynamic:after { content: "play_circle_outline"; }
+  &.image-icon--action-el_longtext:after { content: "view_headline"; }
+  &.image-icon--action-el_code:after { content: "code"; }
+  &.image-icon--action-el_link:after { content: "call_made"; }
 
   &.image-icon--action-image:after { content: "image"; }
   &.image-icon--action-link:after { content: "call_made"; }
