--- a/modules/cms-ui/themes/default/style/openrat-workbench.less
+++ b/modules/cms-ui/themes/default/style/openrat-workbench.less
@@ -226,7 +226,7 @@ div#workbench {
         > nav {
 
             width: 33%;
-            overflow-y: hidden;
+            //overflow-y: hidden;
 
             @media @smartphones {
                 width: 0;
